@@ -155,8 +155,12 @@ $words['Thanks for registering with'] = 'Thanks for registering with';
 $words['Dear'] = 'Dear';
 $words['You are being sent this email because you just registered, your logon details are as follows'] = 'You are being sent this email because you just registered, your logon details are as follows';
 $words['Your registration is being reviewed'] = 'Your registration is being reviewed, you will be notified shortly';
-$words['Your logon is'] = 'Your logon is';
+$words['Your username is'] = 'Your username is';
 $words['Your password is'] = 'Your password is';
+$words['New Registration at'] = 'New Registration at';
+$words['The following user has just registered'] = 'The following user has just registered';
+$words['to enable the new user\'s account'] = 'to enable the new user\'s account';
+$words['username'] = 'username';
 $words['Click'] = 'Click';
 $words['here'] = 'here';
 $words['to logon to the'] = 'to logon to the';
